--- a/src/main/resources/static/css/login-page.css
+++ b/src/main/resources/static/css/login-page.css
@@ -21,7 +21,7 @@
 body {
     align-items: center;
     background-color: var(--white);
-    background: url("https://res.cloudinary.com/dbhnlktrv/image/upload/v1599997626/background_oeuhe7.jpg");
+    background: url("https://cdn.pixabay.com/photo/2018/08/14/13/23/ocean-3605547_1280.jpg");
     /* 决定背景图像的位置是在视口内固定，或者随着包含它的区块滚动。 */
     /* https://developer.mozilla.org/zh-CN/docs/Web/CSS/background-attachment */
     background-attachment: fixed;
